--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           },
@@ -123,6 +127,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "app-teste"
+    }
+  },
+  "defaultProject": "app-teste",
+  "cli": {
+    "analytics": "4a487330-722e-4037-8bf0-8193497afa08"
+  }
 }
